2006-06-06  Jon Phillips <jon@rejon.org>
	* print_files_cct.sh AUTHORS VERSION Makefile.language 
	update_po_files.sh Makefile POTFILES Makefile.include
	print_potfiles.sh ccextras/cc-language.php ccextras/cc-language.bak
	cclib/cc-user.php cclib/cc-defines.php: The new language stuff is
	coming in bulk, so watch the breakages.

	* locale locale/default locale/default/pt_BR 
	locale/default/pt_BR/LC_MESSAGES 
	locale/default/pt_BR/LC_MESSAGES/cchost.po: Added language stuff here
	for translation.

2006-06-05     Victor Stone <fourstones@users.sourceforge.net>

     * ccadmin/cc-install-db.php 3371:
         update: forums and notifications install
     * ccextras/cc-forums-admin.inc 3372:
     * ccextras/cc-forums.inc 3372:
     * ccextras/cc-forums.php 3372:
     * ccextras/update_v_1_2k.inc 3372:
     * ccextras/update_v_3_0c.inc 3372:
         feature: forum sticky and comments close
     * cctemplates 3373:
     * cctemplates/ccmixter/dright-arrow.gif 3373:
     * cctemplates/forums.xml 3373:
     * cctemplates/skin-simple-topics.css 3373:
         feature: forum sticky and comments close
     * cc-custom.php 3374:
         bugfix: blank date choked on Windows

2006-06-04     Victor Stone <fourstones@users.sourceforge.net>

     * ccextras/cc-blog-ping.php 3369:
     * ccextras/cc-forums.inc 3369:
     * ccextras/cc-topics.php 3369:
         bugfix: forum thread page were not sorted by date
     * ccextras/cc-forums.inc 3370:
         UI: default feed was showing up on forum pages

2006-06-02     Victor Stone <fourstones@users.sourceforge.net>

     * mixter-lib/mixter-import-phpBB2.php 3367:
         tweak: disable import script lest it run by, er, accident
     * mixter-lib/mixter-import-phpBB2.php 3368:
         typo in last checkin

2006-05-31     Victor Stone <fourstones@users.sourceforge.net>

     * mixter-files/home.xml 3356:
         ui: fixed layout for IE
     * ccextras/cc-forums.inc 3359: